fix(filemanager): remove content splitter double border

--- a/packages/default/scss/filemanager/_layout.scss
+++ b/packages/default/scss/filemanager/_layout.scss
@@ -37,6 +37,10 @@
         overflow: hidden;
     }
 
+    .k-filemanager-splitter {
+        border-width: 0;
+    }
+
 
     // Navigation
     .k-filemanager-navigation {
